# sundaystage

./: .gitignore  .prettierignore  CLAUDE.md  README.md  index.html  output.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
backend/: README.md
backend/supabase/migrations/: 0001_schema.sql  0002_rls.sql  0003_church_tenancy.sql
companion/: README.md  app.js  index.html  manifest.webmanifest  styles.css  sw.js
docs/: ARCHITECTURE.md  DECISIONS.md  DESIGN_BRIEF.md  DISTRIBUTION.md  LAUNCH.md  LAUNCH_READINESS.md  NEEDS-RICHARD.md  SESSION-PROGRESS-2026-06-03.md  SMOKE-TEST.md  SUNDAYPLAN_IMPORT.md  SUNDAY_BRIDGE_PROTOCOL.md
docs/examples/: sundayplan-example.json
scripts/: prepare-output-bin.mjs
sql/: 0001_initial.sql  0002_song_theme.sql  0003_bible.sql  0004_service_templates.sql  0005_translation_overlay.sql  0006_service_state_check.sql
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.output.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  arrangements.rs  bible.rs  crash.rs  decks.rs  import.rs  libraries.rs  library_publish.rs  live.rs  media.rs  mod.rs  onboarding.rs  output.rs  search.rs  service_templates.rs  services.rs  songs.rs  sync.rs  themes.rs
src-tauri/src/db/: mod.rs  models.rs  validation.rs
src-tauri/src/db/repositories/: arrangements.rs  bible.rs  decks.rs  libraries.rs  media.rs  mod.rs  service_templates.rs  services.rs  songs.rs  themes.rs  translate.rs
src-tauri/src/output/: ipc.rs  mod.rs  process.rs  window.rs
src-tauri/src/services/: bible.rs  crash.rs  cue_list.rs  demo.rs  display.rs  library_publish.rs  live_session.rs  media.rs  mod.rs  scripture_break.rs  session_store.rs  slide_doc.rs  song_import.rs  stage_display.rs  sundayplan.rs  sync.rs  text_fit.rs  theme.rs  tono.rs
src-tauri/src/services/ai/: embed.rs  keystore.rs  lyric_format.rs  mod.rs  plan.rs  translate.rs
src-tauri/src/services/companion/: mod.rs  publisher.rs  transport.rs
src-tauri/src/services/sundayrec_bridge/: dispatch.rs  export.rs  manifest.rs  mod.rs  protocol.rs
src-tauri/tests/: lyric_eval.rs  output_isolation.rs  stress.rs
src/app/: live-bridge-provider.tsx  live-bridge-provider.utils.ts
src/components/: CommandPalette.tsx  ConsentDialog.tsx  Sidebar.tsx  SlideView.tsx  ThemeToggle.tsx  TutorialOverlay.tsx  UpdateBanner.tsx
src/components/ui/: confirm-modal.tsx  dialog.tsx  error-toast.tsx  index.ts
src/features/bible/: BiblePage.tsx  bibleFormat.ts
src/features/decks/: DecksPage.tsx  Inspector.tsx  SlideCanvas.tsx  SlideEditor.tsx  SlideList.tsx  TemplateGallery.tsx  ThemeControls.tsx
src/features/design/: DesignPage.tsx
src/features/live/: ExportModal.tsx  LivePreview.tsx  OutputControls.tsx  StageDisplay.tsx
src/features/media/: MediaPage.tsx
src/features/onboarding/: WelcomeScreen.tsx
src/features/services/: PlanPreviewModal.tsx  ServicesPage.tsx  TemplatesPage.tsx  templateRoles.test.ts  templateRoles.ts
src/lib/: aiConsent.ts  i18n.test.ts  i18n.ts  ipc.ts  live-bridge-integration.test.ts  live-bridge-song-change.test.ts  liveBridge.ts  liveEmitter.ts  outputBridge.test.ts  outputBridge.ts  planImportPreview.ts  planToStage.ts  sectionLabel.ts  serviceItemKind.ts  theme.ts  tutorial.ts  updater.ts  usageEmitter.ts  useErrorToast.test.ts  useErrorToast.ts  useLiveBridge.ts  webShare.test.ts  webShare.ts  webframe.schema.json
src/lib/bindings/: Cue.ts  (+83 more)
src/output/: OutputView.tsx  main.tsx
src/styles/: tokens.css
tests/e2e/: smoke.spec.ts
tests/integration/: biblePage.test.tsx  cn.test.ts  ipc.test.ts  ipcArgs.test.ts  liveBridge.integration.test.ts  liveBridge.test.ts  liveEmitter.test.ts  planImportPreview.test.ts  planToStage.test.ts  sectionLabel.test.ts  serviceTemplates.test.ts  sidebar.test.tsx  slideEditor.test.ts  slideEditorTransform.test.ts  templatesPageRoles.test.tsx  transportbar.test.tsx  usageEmitter.test.ts  workspace.test.ts
website/: index.html  styles.css
(+31 files in other folders)
