[package]
name = "sundaystage"
version = "0.2.0"
description = "Live presentation app for churches — companion to SundayRec"
authors = ["Richard Fossland"]
edition = "2021"
default-run = "sundaystage"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sundaystage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Crash-isolated live output (Phase 5.2). Runs in a **separate OS process** so a
# crash in the main UI never blanks the projector. Speaks the line-delimited
# `OutputMessage`/`OutputAck` protocol from `output::mod` over stdio.
[[bin]]
name = "sundaystage-output"
path = "src/bin/output.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Auto-update (Phase 13.2) — desktop only; see lib.rs `#[cfg(desktop)]`.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# System keychain for the Anthropic API key (Phase 4.1). Native backends per
# platform; sync-secret-service (pure-Rust zbus) on Linux.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data layer
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Type generation for the frontend (run with `cargo test export_bindings`)
ts-rs = { version = "11", features = ["serde-compat", "chrono-impl", "uuid-impl"] }

# HTTP client for the Anthropic API — only pulled in under the `ai` feature so
# the default build (and CI without network/keys) compiles without it.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
# Compile the live Anthropic API client (Phase 4). Without it, AI features fall
# back to the local heuristic formatter. Build real AI with `--features ai`.
ai = ["dep:reqwest"]
